--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,535 @@
 .App {
+  color: #333333;
+  font-family: 'Nanum Myeongjo', serif;
+  height: 100%;
+  text-align: center;
+  -webkit-font-smoothing: antialiased;
+}
+
+.card {
+  background-color: #ffffff;
+  line-height: 2rem;
+  margin: auto;
+  max-width: 420px;
+  padding: 0;
+  position: relative;
+  width: 100%;
+}
+
+/* Intro */
+.intro-wrap {
+  box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.05);
+  margin: 0 0 0 0px;
+  --wave-color: #ffffff;
+}
+
+.intro-title {
+  display: flex;
+  font-size: 1.1rem;
+  letter-spacing: -0.2px;
+  line-height: 2rem;
+  padding: 2rem 1rem 1rem 1rem;
+}
+
+.intro-title-groom {
+  display: flex;
+  flex: 1;
+  justify-content: center;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.intro-title-date {
+  align-items: center;
   display: flex;
-  flex-direction: column;
+  flex: 1;
+  font-size: 1.6rem;
+  height: 3.75rem;
+  justify-content: center;
+}
+
+.intro-title-date .month {
+  align-self: flex-start;
+}
+
+.intro-title-date .divider-wrap {
+  text-align: center;
+  width: 12px;
+}
+
+.intro-title-date .divider-wrap .divider {
+  background-color: #333333;
+  height: 60px;
+  margin: 0 auto;
+  transform: rotate(45deg);
+  width: 1px;
+}
+
+.intro-title-date .day {
+  align-self: flex-end;
+}
+
+.intro-title-bride {
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  text-align: center;
+}
+
+.intro-photo {
+  height: auto;
+  line-height: 0;
+  width: 100%;
+}
+
+.intro-photo .blur {
+  background-color: #ffffff;
+  height: 15px;
+  left: 0;
+  position: relative;
+  right: 0;
+}
+
+.intro-photo .blur.top {
+  top: -10px;
+  box-shadow: 0px 15px 15px 15px #ffffff;
+}
+
+.intro-photo .blur.bottom {
+  bottom: -20px;
+  box-shadow: 0px -15px 15px 15px #ffffff;
+}
+
+.intro-photo .photo {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.intro-blend-video {
+  display: block;
+  position: absolute;
+  mix-blend-mode: screen;
+  left: 0;
+  top: 0;
+  width: 100%;
+}
+
+.intro-blend-video video {
+  width: 100%;
+  opacity: 1;
+  visibility: initial;
+}
+
+.intro-description {
+  letter-spacing: 1px;
+  padding: 3rem 0;
+  text-shadow: -1px -1px 0 #ffffff;
+}
+
+/* Greetings */
+.greetings-wrap {
+  background-color: #f3f3f3;
+  opacity: 1;
+  padding: 7rem 0 0 0;
+  transform: translate(0px, 0px);
+}
+
+.greetings-wrap .date {
+  color: #a96b6c;
+  font-size: 0.9rem;
+  letter-spacing: 5px;
+  padding: 0 0 1rem 0;
+}
+
+.greetings-wrap .title {
+  color: #a96b6c;
+  font-size: 1.5rem;
+}
+
+.greetings-wrap .comment {
+  display: inline-block;
+  line-height: 2.4rem;
+  margin: 4rem 0rem 4rem 0rem;
+  font-size: 1rem;
+}
+
+.greetings-wrap .photo {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+/* Members */
+.members-wrap {
+  background-color: #eceae8;
+  font-size: 1.3rem;
+  letter-spacing: 1px;
+  padding: 1rem 0;
+}
+
+.members-wrap div {
+  font-size: 1.3rem;
+  letter-spacing: 1px;
+  padding: 0.5rem 0 0 0;
+}
+
+.members-wrap .relation {
+  font-size: 1rem;
+  color: #8a857f;
+}
+
+.members-wrap .lname {
+  letter-spacing: 3px;
+}
+
+.members-wrap a {
+  color: #333333;
+}
+
+.members-wrap .material-icons {
+  cursor: pointer;
+  font-size: 1.1rem;
+}
+
+/* HonJus */
+.honju-wrap {
+  background-color: #f3f3f3;
+  padding: 2rem 0 2rem 0;
+}
+
+.honju-wrap .contact-box {
+  border: thin solid #a96b6c;
+  border-radius: 4px;
+  color: #a96b6c;
+  cursor: pointer;
+  margin: 0 auto;
+  max-width: 260px;
+  text-align: center;
+}
+
+.honju-wrap .contact-box p {
+  font-size: 0.9rem;
+  margin: 4px;
+  text-align: center;
+}
+
+/* Dialog */
+.dialog {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5);
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.dialog-content {
+  display: flex;
+  flex-direction: column;
+  width: 400px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.dialog-content .title {
+  background-color: #ede9e6;
+  margin: 0 auto;
+  width: 100%;
+}
+
+.dialog-content .title p {
+  color: #333333;
+  font-size: 1.2rem;
+}
+
+.dialog-honjus {
+  background-color: #f3f3f3;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.dialog-honjus div {
+  display: flex;
+  flex-direction: column;
+  padding: 0.25rem 0.25rem;
+}
+
+.dialog-honjus .divider {
+  background-color: #ede9e6;
+  height: 1px;
+  padding: 0 0;
+}
+
+.dialog-honjus .groom {
+  color: #668eaa;
+}
+
+.dialog-honjus .groom a {
+  color: #668eaa;
+}
+
+.dialog-honjus .bride {
+  color: #ce8383;
+}
+
+.dialog-honjus .bride a {
+  color: #ce8383;
+}
+
+/* 역할 | 이름 | 아이콘1 | 아이콘2 */
+.dialog-honjus div div {
+  display: flex;
+  flex-direction: row;
+}
+
+.dialog-honjus .role {
+  flex: 4;
+  padding-left: 20px;
+}
+
+.dialog-honjus .name {
+  flex: 3;
+  color: #333333;
+}
+
+.dialog-honjus .material-icons {
+  flex: 1;
+  font-size: 1.4rem;
+  padding-top: 8px;
+  padding-right: 10px;
+}
+
+/* Gallery */
+.gallery-wrap {
+  background-color: #f3f3f3;
+}
+
+.gallery-wrap .title {
+  color: #a96b6c;
+  font-size: 1.5rem;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.gallery-swiper img {
+  object-fit: cover;
+  overflow: hidden;
+  height: 520px;
+  padding-bottom: 40px;
+}
+
+/* Location */
+.location-wrap {
+  background-color: #f3f3f3;
+}
+
+.location-wrap .title {
+  color: #a96b6c;
+  font-size: 1.5rem;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.location-wrap .venue {
+  color: #333333;
+  font-size: 1rem;
+}
+
+.location-wrap .address {
+  color: #a96b6c;
+  font-size: 0.8rem;
+}
+
+.location-wrap .map {
+  padding-top: 24px;
+}
+
+.location-wrap .map iframe {
+  width: 100%;
+  height: 400px;
+  border: 0;
+}
+
+.location-wrap .navigate {
+  font-family: 'Nanum Gothic', sans-serif;
+  text-align: left;
+  padding: 6px 10px;
+  background-color: #ede9e6;
+  color: #333333;
+  font-size: 0.8rem;
+  height: 1.8rem;
+  display: flex;
+}
+
+.location-wrap .navigate div {
+  flex: 1.2;
+  margin: auto;
+  height: 1.1rem;
+  line-height: 1.1rem;
+
+  text-align: center;
+  cursor: pointer;
+}
+
+.naverMap {
+  border-right: 1px solid rgba(97, 80, 67, 0.15);
+}
+
+.kakaoMap {
+  border-right: 1px solid rgba(97, 80, 67, 0.15);
+}
+
+.location-wrap .navigate img {
+  position: relative;
+  top: -1px;
+  width: 16px;
+  height: 16px;
+  vertical-align: middle;
+  margin-right: 6px;
+  border-radius: 16%;
+}
+
+.location-wrap .navigate a {
+  flex: 1;
+}
+
+.location-wrap .guide .title {
+  text-align: left;
+  padding-top: 25px;
+  padding-left: 24px;
+  font-size: 1.2rem;
+  padding-bottom: 6px;
+}
+
+.location-wrap .guide .content {
+  text-align: left;
+  padding-left: 24px;
+  font-size: 0.9rem;
+  padding-bottom: 4px;
+  line-height: 1.2rem;
+}
+
+/* Account */
+.account-wrap {
+  background-color: #f3f3f3;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.account-wrap .title {
+  color: #a96b6c;
+  padding-top: 25px;
+  font-size: 1.2rem;
+  padding-bottom: 36px;
+}
+
+.account-wrap .collapsible {
+  margin-left: 48px;
+  margin-right: 48px;
+  margin-bottom: 16px;
+}
+
+.account-wrap .collapsible .header {
+  padding: 6px;
+  background-color: #ede9e6;
+  cursor: pointer;
+}
+
+.account-wrap .collapsible .content {
+  background-color: #f8f8f8;
+  display: flex;
+  flex-direction: column;
+  font-family: 'Nanum Gothic', sans-serif;
+  padding: 6px;
+}
+
+.account-wrap .collapsible .content .account-box {
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+}
+
+.account-wrap .collapsible .content .divider {
+  width: 100%;
+  height: 1px;
+  background-color: #eeeeee;
+}
+
+.account-box .account {
+  flex: 3;
+  text-align: left;
+  font-size: 0.9rem;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  font-weight: bold;
+  letter-spacing: -0.8px;
+}
+
+.account-box .actions {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.account-box .actions .copy-button {
+  flex: 1;
+  text-align: center;
+  font-size: 0.8rem;
+  background-color: #f2efed;
+  border-radius: 4px;
+  margin-top: 4px;
+  margin-bottom: 4px;
+  padding-left: 8px;
+  padding-right: 8px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.account-box .actions .pay-button {
+  flex: 1;
+  text-align: center;
+  font-size: 0.8rem;
+  background-color: #fbdf1d;
+  border-radius: 4px;
+  margin-top: 4px;
+  margin-bottom: 4px;
+  padding-left: 8px;
+  padding-right: 8px;
+  cursor: pointer;
+}
+
+.account-box .actions .empty-button {
+  flex: 1;
+  text-align: center;
+  font-size: 0.8rem;
+  opacity: 0%;
+  margin-top: 4px;
+  margin-bottom: 4px;
+  padding-left: 8px;
+  padding-right: 8px;
+}
+
+.account-box .actions .pay-button img {
+  width: auto;
+  height: 12px;
+  vertical-align: middle;
+}
+
+.account-box .copy-toast {
+  width: 400px;
+}
+
+.fade-in {
+  transition: all .8s ease-in-out;
+  box-sizing: border-box;
+}
+
+div {
+  display: block;
+}
+
+img {
+  width: 100%;
 }
