--- a/src/App.css
+++ b/src/App.css
@@ -411,6 +411,41 @@
   line-height: 1.2rem;
 }
 
+/* CharteredBus */
+.charteredBus-wrap {
+  background-color: #f3f3f3;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.charteredBus-wrap .title {
+  color: #a96b6c;
+  padding-top: 25px;
+  font-size: 1.2rem;
+  padding-bottom: 36px;
+}
+
+.charteredBus-wrap .subtitle {
+  color: #a96b6c;
+  padding-top: 25px;
+  font-size: 1.1rem;
+  padding-bottom: 36px;
+}
+
+.charteredBus-wrap .content {
+  color: #333333;
+  padding-top: 25px;
+  font-size: 1rem;
+  text-align: left;
+  margin-left: 48px;
+}
+
+.charteredBus-wrap .notice {
+  color: #a96b6c;
+  font-size: 0.89rem;
+  padding-bottom: 36px;
+}
+
 /* Account */
 .account-wrap {
   background-color: #f3f3f3;
@@ -463,14 +498,15 @@
   font-size: 0.9rem;
   padding-top: 4px;
   padding-bottom: 4px;
-  font-weight: bold;
-  letter-spacing: -0.8px;
+  font-weight: normal;
+  letter-spacing: -0.4px;
 }
 
 .account-box .actions {
   flex: 1;
   display: flex;
   flex-direction: column;
+  font-weight: bold;
 }
 
 .account-box .actions .copy-button {
@@ -483,7 +519,6 @@
   margin-bottom: 4px;
   padding-left: 8px;
   padding-right: 8px;
-  font-weight: bold;
   cursor: pointer;
 }
 
